--- a/local.properties
+++ b/local.properties
@@ -7,6 +7,6 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Fri Apr 08 09:27:02 BRT 2016
-ndk.dir=C\:\\Users\\Ray-PC\\AppData\\Local\\Android\\sdk\\ndk-bundle
-sdk.dir=C\:\\Users\\Ray-PC\\AppData\\Local\\Android\\sdk
+#Fri Apr 15 20:23:35 BRT 2016
+ndk.dir=C\:\\Users\\Ray\\AppData\\Local\\Android\\sdk\\ndk-bundle
+sdk.dir=C\:\\Users\\Ray\\AppData\\Local\\Android\\sdk
