--- a/app/build.gradle
+++ b/app/build.gradle
@@ -22,6 +22,8 @@ android {
         compile 'com.android.support:appcompat-v7:23.2.0'
         compile 'com.mcxiaoke.volley:library:1.0.18'
         compile 'com.android.support:design:23.2.0'
+        compile 'com.android.support:appcompat-v7:23.3.0'
+        compile 'com.android.support:recyclerview-v7:23.0.+'
     }
 
 }
@@ -29,7 +31,9 @@ android {
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     testCompile 'junit:junit:4.12'
-    compile 'com.android.support:appcompat-v7:23.2.0'
-    compile 'com.android.support:design:23.2.0'
+    compile 'com.android.support:appcompat-v7:23.3.0'
+    compile 'com.android.support:design:23.3.0'
     compile 'com.google.android.gms:play-services-appindexing:8.1.0'
+    compile 'com.android.support:recyclerview-v7:23.3.0'
+    compile 'com.android.support:support-v4:23.3.0'
 }
