--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -26,26 +26,20 @@
             android:name=".CadastroUsuarioActivity"
             android:configChanges="orientation"
             android:screenOrientation="portrait" />
-        <activity
-            android:name=".FiltrosConsulta"
-            android:configChanges="orientation"
-            android:screenOrientation="portrait" />
 
         <meta-data
             android:name="com.google.android.gms.version"
             android:value="@integer/google_play_services_version" />
 
-        <activity
-            android:name=".TelaPrincipal"
-            android:configChanges="orientation"
-            android:label="@string/title_activity_tela_principal"
-            android:screenOrientation="portrait"
-            android:theme="@style/AppTheme" />
         <activity android:name=".InformacoesProduto" />
         <activity
             android:name=".ListaProdutos"
+            android:configChanges="orientation"
             android:label="@string/title_activity_lista_produtos"
-            android:theme="@style/AppTheme"></activity>
+            android:screenOrientation="portrait"
+            android:theme="@style/AppTheme" />
+        <activity android:name=".TelaPrincipalControler" />
+        <activity android:name=".FinalizarPedido"></activity>
     </application>
 
 </manifest>
