--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -31,15 +31,19 @@
             android:name="com.google.android.gms.version"
             android:value="@integer/google_play_services_version" />
 
-        <activity android:name=".VizualizarProduto"
+        <activity
+            android:name=".VizualizarProduto"
             android:configChanges="orientation"
-            android:screenOrientation="portrait"/>
-        <activity android:name=".TelaPrincipalControler"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".TelaPrincipalControler"
             android:configChanges="orientation"
-            android:screenOrientation="portrait"/>
-        <activity android:name=".FinalizarPedido"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".FinalizarPedido"
             android:configChanges="orientation"
-            android:screenOrientation="portrait"></activity>
+            android:screenOrientation="portrait" />
+        <activity android:name=".ListaPedidosAntigo"></activity>
     </application>
 
 </manifest>
