Alteração de Layout,Cores,Restrições

--- a/local.properties
+++ b/local.properties
@@ -7,6 +7,6 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Wed Apr 27 17:52:21 BRT 2016
-ndk.dir=C\:\\Users\\Ray\\AppData\\Local\\Android\\sdk\\ndk-bundle
-sdk.dir=C\:\\Users\\Ray\\AppData\\Local\\Android\\sdk
+#Thu May 05 11:03:43 BRT 2016
+ndk.dir=C\:\\Users\\Ray-PC\\AppData\\Local\\Android\\Sdk\\ndk-bundle
+sdk.dir=C\:\\Users\\Ray-PC\\AppData\\Local\\Android\\Sdk
