--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -44,7 +44,8 @@
             android:configChanges="orientation"
             android:screenOrientation="portrait" />
         <activity android:name=".ListaPedidosAntigo" />
-        <activity android:name=".VizualizarPedido"></activity>
+        <activity android:name=".VizualizarPedido" />
+        <activity android:name=".RedefinirSenha"></activity>
     </application>
 
 </manifest>
