--- a/local.properties
+++ b/local.properties
@@ -7,6 +7,6 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Fri May 06 19:53:07 BRT 2016
-ndk.dir=C\:\\Users\\Ray\\AppData\\Local\\Android\\sdk\\ndk-bundle
-sdk.dir=C\:\\Users\\Ray\\AppData\\Local\\Android\\sdk
+#Wed May 18 10:44:38 BRT 2016
+ndk.dir=C\:\\Users\\Ray-PC\\AppData\\Local\\Android\\Sdk\\ndk-bundle
+sdk.dir=C\:\\Users\\Ray-PC\\AppData\\Local\\Android\\Sdk
