--- a/local.properties
+++ b/local.properties
@@ -7,6 +7,6 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Tue May 24 09:34:20 BRT 2016
-ndk.dir=C\:\\Users\\Ray-PC\\AppData\\Local\\Android\\Sdk\\ndk-bundle
-sdk.dir=C\:\\Users\\Ray-PC\\AppData\\Local\\Android\\Sdk
+#Thu May 26 11:38:15 BRT 2016
+ndk.dir=C\:\\Users\\Ray\\AppData\\Local\\Android\\sdk\\ndk-bundle
+sdk.dir=C\:\\Users\\Ray\\AppData\\Local\\Android\\sdk
